[tool.poetry]
name = "openchatui"
version = "0.1.0"
description = ""
authors = ["laxitshahi <shahilax@my.yorku.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.33.0"
proxyllm = {path = "../llm-proxy"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
